tests/ui/intrinsics/non-integer-atomic.stderr
error[E0511]: invalid monomorphization of `atomic_load_seqcst` intrinsic: expected basic integer type, found `bool`
  --> $DIR/non-integer-atomic.rs:16:5
   |
LL |     intrinsics::atomic_load_seqcst(p);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_store_seqcst` intrinsic: expected basic integer type, found `bool`
  --> $DIR/non-integer-atomic.rs:21:5
   |
LL |     intrinsics::atomic_store_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_xchg_seqcst` intrinsic: expected basic integer type, found `bool`
  --> $DIR/non-integer-atomic.rs:26:5
   |
LL |     intrinsics::atomic_xchg_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_cxchg_seqcst_seqcst` intrinsic: expected basic integer type, found `bool`
  --> $DIR/non-integer-atomic.rs:31:5
   |
LL |     intrinsics::atomic_cxchg_seqcst_seqcst(p, v, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_load_seqcst` intrinsic: expected basic integer type, found `Foo`
  --> $DIR/non-integer-atomic.rs:36:5
   |
LL |     intrinsics::atomic_load_seqcst(p);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_store_seqcst` intrinsic: expected basic integer type, found `Foo`
  --> $DIR/non-integer-atomic.rs:41:5
   |
LL |     intrinsics::atomic_store_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_xchg_seqcst` intrinsic: expected basic integer type, found `Foo`
  --> $DIR/non-integer-atomic.rs:46:5
   |
LL |     intrinsics::atomic_xchg_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_cxchg_seqcst_seqcst` intrinsic: expected basic integer type, found `Foo`
  --> $DIR/non-integer-atomic.rs:51:5
   |
LL |     intrinsics::atomic_cxchg_seqcst_seqcst(p, v, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_load_seqcst` intrinsic: expected basic integer type, found `&dyn Fn()`
  --> $DIR/non-integer-atomic.rs:56:5
   |
LL |     intrinsics::atomic_load_seqcst(p);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_store_seqcst` intrinsic: expected basic integer type, found `&dyn Fn()`
  --> $DIR/non-integer-atomic.rs:61:5
   |
LL |     intrinsics::atomic_store_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_xchg_seqcst` intrinsic: expected basic integer type, found `&dyn Fn()`
  --> $DIR/non-integer-atomic.rs:66:5
   |
LL |     intrinsics::atomic_xchg_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_cxchg_seqcst_seqcst` intrinsic: expected basic integer type, found `&dyn Fn()`
  --> $DIR/non-integer-atomic.rs:71:5
   |
LL |     intrinsics::atomic_cxchg_seqcst_seqcst(p, v, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_load_seqcst` intrinsic: expected basic integer type, found `[u8; 100]`
  --> $DIR/non-integer-atomic.rs:76:5
   |
LL |     intrinsics::atomic_load_seqcst(p);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_store_seqcst` intrinsic: expected basic integer type, found `[u8; 100]`
  --> $DIR/non-integer-atomic.rs:81:5
   |
LL |     intrinsics::atomic_store_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_xchg_seqcst` intrinsic: expected basic integer type, found `[u8; 100]`
  --> $DIR/non-integer-atomic.rs:86:5
   |
LL |     intrinsics::atomic_xchg_seqcst(p, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `atomic_cxchg_seqcst_seqcst` intrinsic: expected basic integer type, found `[u8; 100]`
  --> $DIR/non-integer-atomic.rs:91:5
   |
LL |     intrinsics::atomic_cxchg_seqcst_seqcst(p, v, v);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0511`.
